--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -58,6 +58,12 @@
   @import "blocks/cols/_cols-l";
 }
 
+@import "blocks/think-us/_think-us";
+@media (max-width: $width-tablet - 1) {
+  //blocks
+  @import "blocks/think-us/_think-us-s";
+}
+
 @import "blocks/_gallery";
 //pages
 //modules
