--- a/scss/layout/_btn.scss
+++ b/scss/layout/_btn.scss
@@ -1,18 +1,19 @@
 .btn-wrapper {
 	margin: 30px 0;
+  text-align: center;
 
 
 	.btn {
-		display: block;
+		display: inline-block;
 		margin: 0 auto;
 		@include border-radius(5px);
 		@include background(linear-gradient(bottom, #2f9295, #45d0d0));
 		@include box-shadow(0px 3px 4px 0px rgba(0, 0, 0, 0.5));
 		background-color: #45d0d0;
 		text-align: center;
-		width: 160px;
+		min-width: 160px;
 		height: 35px;
-		padding: 0;
+		padding: 0 10px;
 		border: 0;
 		text-decoration: none;
 		font: 12px $Montserrat;
