--- a/scss/layout/header/_header.scss
+++ b/scss/layout/header/_header.scss
@@ -9,7 +9,9 @@
 		background: black;
 		@include box-shadow(0px 5px 14px 0px rgba(0, 0, 0, 0.35));
 
-    #touch-top-menu {display: none;}
+    #touch-top-menu {
+      display: none;
+    }
 
 		ul {
 			margin: 0 auto;
@@ -78,7 +80,9 @@
 		border-top: 1px solid #131d1d;
 		border-bottom: 1px solid #4d4d2f;
 
-    #touch-menu {display: none;}
+    #touch-menu {
+      display: none;
+    }
 
 		ul {
 			margin: 0 auto;
@@ -140,13 +144,21 @@
 				opacity: 0.6;
 			}
 
-			$sprs: colo, facebook, twitter, zw;
-			@each $spr in $sprs {
+      &.colo {
+       @include oneline-sprite-box($icons, colo);
+      }
 
-				&.#{$spr} {
-					@include oneline-sprite-box($icons, $spr);
-				}
-			}
+      &.facebook {
+        @include oneline-sprite-box($icons, facebook);
+      }
+
+      &.twitter {
+        @include oneline-sprite-box($icons, twitter);
+      }
+
+      &.zw {
+        @include oneline-sprite-box($icons, zw);
+      }
 		}
 	}
 }
