--- a/scss/layout/header/_header-s.scss
+++ b/scss/layout/header/_header-s.scss
@@ -4,7 +4,7 @@
 
   .top-menu {
 
-    #touch-top-menu {
+    .btn-top-menu {
       display: block;
       width: 100%;
       height: 41px;
@@ -18,10 +18,14 @@
 
     ul {
       position: absolute;
-      display: none;
       z-index: 1;
       padding-left: 0;
-
+      visibility: hidden;
+      opacity: 0;
+      transition: all 0.5s;
+      @include transform(translate(0, 5px));
+      width: 100%;
+      text-align: center;
 
       li {
         display: list-item;
@@ -67,7 +71,7 @@
 
     a {
       top: 0px;
-      img{
+      img {
         width: 100%;
         height: auto;
       }
@@ -78,10 +82,9 @@
     }
   }
 
-
   .nav {
 
-    #touch-menu {
+    .btn-nav {
       display: block;
       width: 100%;
       height: 41px;
@@ -94,9 +97,14 @@
     }
 
     ul {
-      display: none;
       position: absolute;
       z-index: 1;
+      visibility: hidden;
+      opacity: 0;
+      transition: all 0.5s;      
+      @include transform(translate(0, 5px));
+      width: 100%;
+      text-align: center;
 
       li {
         display: list-item;
@@ -115,6 +123,30 @@
           }
         }
       }
+    }
+  }
+}
+
+.nav-active {
+
+  .nav {
+
+    ul {
+      visibility: visible;
+      opacity: 1;
+      @include transform(translate(0, 0));
+    }
+  }
+}
+
+.top-menu-active {
+
+  .top-menu {
+
+    ul {
+      visibility: visible;
+      opacity: 1;
+      @include transform(translate(0, 0));
     }
   }
 }
