--- a/scss/layout/header/_header.scss
+++ b/scss/layout/header/_header.scss
@@ -9,7 +9,7 @@
 		background: black;
 		@include box-shadow(0px 5px 14px 0px rgba(0, 0, 0, 0.35));
 
-    #touch-top-menu {
+    .btn-top-menu {
       display: none;
     }
 
@@ -80,7 +80,7 @@
 		border-top: 1px solid #131d1d;
 		border-bottom: 1px solid #4d4d2f;
 
-    #touch-menu {
+    .btn-nav {
       display: none;
     }
 
