--- a/theme/css/styles.css
+++ b/theme/css/styles.css
@@ -607,7 +607,7 @@ ul li {
   -webkit-box-shadow: 0px 5px 14px 0px rgba(0, 0, 0, 0.35);
   box-shadow: 0px 5px 14px 0px rgba(0, 0, 0, 0.35);
 }
-.site-header .top-menu #touch-top-menu {
+.site-header .top-menu .btn-top-menu {
   display: none;
 }
 .site-header .top-menu ul {
@@ -672,7 +672,7 @@ ul li {
   border-top: 1px solid #131d1d;
   border-bottom: 1px solid #4d4d2f;
 }
-.site-header .nav #touch-menu {
+.site-header .nav .btn-nav {
   display: none;
 }
 .site-header .nav ul {
@@ -1782,7 +1782,7 @@ html[dir="rtl"] .select2-container-multi .select2-search-choice-close {
     height: 270px;
     text-align: center;
   }
-  .site-header .top-menu #touch-top-menu {
+  .site-header .top-menu .btn-top-menu {
     display: block;
     width: 100%;
     height: 41px;
@@ -1795,9 +1795,17 @@ html[dir="rtl"] .select2-container-multi .select2-search-choice-close {
   }
   .site-header .top-menu ul {
     position: absolute;
-    display: none;
     z-index: 1;
     padding-left: 0;
+    visibility: hidden;
+    opacity: 0;
+    transition: all 0.5s;
+    -moz-transform: translate(0, 5px);
+    -ms-transform: translate(0, 5px);
+    -webkit-transform: translate(0, 5px);
+    transform: translate(0, 5px);
+    width: 100%;
+    text-align: center;
   }
   .site-header .top-menu ul li {
     display: list-item;
@@ -1826,7 +1834,7 @@ html[dir="rtl"] .select2-container-multi .select2-search-choice-close {
     width: 100%;
     height: auto;
   }
-  .site-header .nav #touch-menu {
+  .site-header .nav .btn-nav {
     display: block;
     width: 100%;
     height: 41px;
@@ -1838,9 +1846,17 @@ html[dir="rtl"] .select2-container-multi .select2-search-choice-close {
     letter-spacing: 3px;
   }
   .site-header .nav ul {
-    display: none;
     position: absolute;
     z-index: 1;
+    visibility: hidden;
+    opacity: 0;
+    transition: all 0.5s;
+    -moz-transform: translate(0, 5px);
+    -ms-transform: translate(0, 5px);
+    -webkit-transform: translate(0, 5px);
+    transform: translate(0, 5px);
+    width: 100%;
+    text-align: center;
   }
   .site-header .nav ul li {
     display: list-item;
@@ -1849,6 +1865,24 @@ html[dir="rtl"] .select2-container-multi .select2-search-choice-close {
   .site-header .nav ul li a {
     padding: 12px 10px;
     font: 12px Montserrat;
+  }
+
+  .nav-active .nav ul {
+    visibility: visible;
+    opacity: 1;
+    -moz-transform: translate(0, 0);
+    -ms-transform: translate(0, 0);
+    -webkit-transform: translate(0, 0);
+    transform: translate(0, 0);
+  }
+
+  .top-menu-active .top-menu ul {
+    visibility: visible;
+    opacity: 1;
+    -moz-transform: translate(0, 0);
+    -ms-transform: translate(0, 0);
+    -webkit-transform: translate(0, 0);
+    transform: translate(0, 0);
   }
 
   .site-container {
