--- a/scss/layout/header/_header-s.scss
+++ b/scss/layout/header/_header-s.scss
@@ -6,17 +6,33 @@
 
     .btn-top-menu {
       display: block;
-      width: 100%;
-      height: 41px;
-      color: #86827c;
-      padding: 0 10px;
-      font: 17px/41px $Gotham;
-      text-decoration: none;
-      text-transform: uppercase;
-      letter-spacing: 0.5px;
+      position: relative;
+      float: right;
+      padding: 9px 10px;
+      margin: 2px 15px 2px 0;
+      border-radius: 4px;
+
+      &:before, &:after {
+        content: "";
+      }
+
+      &:before {
+        margin-top: 0;
+      }
+
+      span, &:before, &:after {
+        margin-top: 4px;
+        display: block;
+        width: 22px;
+        height: 2px;
+        border-radius: 1px;
+        background-color: #fff;
+      }
     }
 
     ul {
+      clear: both;
+      top: 41px;
       position: absolute;
       z-index: 1;
       padding-left: 0;
@@ -99,7 +115,7 @@
       z-index: 1;
       visibility: hidden;
       opacity: 0;
-      transition: all 0.5s;      
+      transition: all 0.5s;
       @include transform(translate(0, 5px));
       width: 100%;
       text-align: center;
