--- a/theme/css/styles.css
+++ b/theme/css/styles.css
@@ -1788,16 +1788,29 @@ html[dir="rtl"] .select2-container-multi .select2-search-choice-close {
   }
   .site-header .top-menu .btn-top-menu {
     display: block;
-    width: 100%;
-    height: 41px;
-    color: #86827c;
-    padding: 0 10px;
-    font: 17px/41px Gotham;
-    text-decoration: none;
-    text-transform: uppercase;
-    letter-spacing: 0.5px;
+    position: relative;
+    float: right;
+    padding: 9px 10px;
+    margin: 2px 15px 2px 0;
+    border-radius: 4px;
+  }
+  .site-header .top-menu .btn-top-menu:before, .site-header .top-menu .btn-top-menu:after {
+    content: "";
+  }
+  .site-header .top-menu .btn-top-menu:before {
+    margin-top: 0;
+  }
+  .site-header .top-menu .btn-top-menu span, .site-header .top-menu .btn-top-menu:before, .site-header .top-menu .btn-top-menu:after {
+    margin-top: 4px;
+    display: block;
+    width: 22px;
+    height: 2px;
+    border-radius: 1px;
+    background-color: #fff;
   }
   .site-header .top-menu ul {
+    clear: both;
+    top: 41px;
     position: absolute;
     z-index: 1;
     padding-left: 0;
