--- a/scss/layout/header/_header-s.scss
+++ b/scss/layout/header/_header-s.scss
@@ -55,6 +55,10 @@
           background-color: black;
           width: 100%;
           background-position: 50%;
+
+          a {
+            width: 100%;
+          }
         }
 
         &.img {
